--- a/pg/iret/FO/ソルバーソーシング機能フローチャート.md
+++ b/pg/iret/FO/ソルバーソーシング機能フローチャート.md
@@ -31,309 +31,176 @@
 
 ---
 
-## 📊 人材要件機能フローチャート
+## 📋 人材要件機能 時系列アクションフロー
 
-### 全体フロー
-```mermaid
-flowchart TD
-    Start([開始]) --> Login[👤 SOLVER_STAFF:<br/>システムにログイン]
-    Login --> Menu[👤 SOLVER_STAFF:<br/>ソルバーメニュー画面を表示<br/>📍 /solver/menu]
-    Menu --> SelectCorp[👤 SOLVER_STAFF:<br/>法人ソルバーを選択<br/>🎯 「法人ソルバーを選択する」]
-    SelectCorp --> CorpCheck{🖥️ システム:<br/>法人ソルバー情報<br/>登録済み？}
-    
-    CorpCheck -->|❌ 未登録| InitCorpInfo[👤 SOLVER_STAFF:<br/>法人ソルバー情報を入力<br/>📝 初期設定モーダル]
-    InitCorpInfo --> CorpInfoSave[🖥️ システム:<br/>法人ソルバー情報を保存<br/>🔗 API: POST /solver-corporations]
-    CorpInfoSave --> MenuChoice
-    
-    CorpCheck -->|✅ 登録済み| MenuChoice{👤 SOLVER_STAFF:<br/>機能を選択}
-    
-    MenuChoice -->|新規申請| NewSolverApp[👤 SOLVER_STAFF:<br/>新規個人ソルバー申請<br/>🎯 「新規ソルバー申請」]
-    MenuChoice -->|候補管理| CandidateList[👤 SOLVER_STAFF:<br/>ソルバー候補一覧<br/>🎯 「ソルバー候補」]
-    MenuChoice -->|一覧表示| SolverList[👤 SOLVER_STAFF:<br/>個人ソルバー一覧<br/>🎯 「ソルバー一覧」]
-    MenuChoice -->|稼働率更新| UtilRateUpdate[👤 SOLVER_STAFF:<br/>稼働率・単価更新<br/>🎯 「稼働率・単価更新」]
-    
-    %% 終了
-    SolverList --> End([終了])
-    CandidateList --> End
-    NewSolverApp --> End
-    UtilRateUpdate --> End
-    
-    style Start fill:#dae8fc,stroke:#6c8ebf
-    style End fill:#dae8fc,stroke:#6c8ebf
-    style Login fill:#e1d5e7,stroke:#9673a6
-    style Menu fill:#e1d5e7,stroke:#9673a6
-    style SelectCorp fill:#e1d5e7,stroke:#9673a6
-    style CorpCheck fill:#fff2cc,stroke:#d6b656
-    style InitCorpInfo fill:#f8cecc,stroke:#b85450
-    style CorpInfoSave fill:#e1d5e7,stroke:#9673a6
-    style MenuChoice fill:#fff2cc,stroke:#d6b656
-    style NewSolverApp fill:#e1d5e7,stroke:#9673a6
-    style CandidateList fill:#e1d5e7,stroke:#9673a6
-    style SolverList fill:#e1d5e7,stroke:#9673a6
-    style UtilRateUpdate fill:#e1d5e7,stroke:#9673a6
-```
+### 🔄 A. 新規個人ソルバー申請フロー（完全版）
 
-### 新規個人ソルバー申請フロー
-```mermaid
-flowchart TD
-    Start([新規申請開始]) --> BasicInfo[👤 SOLVER_STAFF:<br/>個人ソルバー基本情報を入力<br/>📋 必須: 名前、かな、性別、生年月日、職歴]
-    BasicInfo --> ScreeningItems[👤 SOLVER_STAFF:<br/>スクリーニング項目を入力<br/>📊 8項目: 評価(はい/いいえ) + エビデンス]
-    ScreeningItems --> CriteriaItems[👤 SOLVER_STAFF:<br/>クライテリア項目を入力<br/>📝 8項目: エビデンス(テキスト)]
-    CriteriaItems --> TempSave{👤 SOLVER_STAFF:<br/>一時保存する？}
-    
-    TempSave -->|✅ Yes| SaveTemp[🖥️ システム:<br/>一時保存を実行<br/>💾 「一時保存しました」]
-    TempSave -->|❌ No| ConfirmScreen[🖥️ システム:<br/>確認画面を表示<br/>🎯 「確認画面に進む」]
-    
-    SaveTemp --> Complete1[✅ 一時保存完了]
-    ConfirmScreen --> SubmitApp[👤 SOLVER_STAFF:<br/>申請を実行<br/>🎯 「申請する」]
-    SubmitApp --> SystemReview[🖥️ システム:<br/>申請内容を審査<br/>🔗 API: POST /solvers]
-    SystemReview --> AppComplete[🖥️ システム:<br/>申請完了通知を表示<br/>✅ 「申請が完了しました」]
-    AppComplete --> Complete2[✅ 申請完了]
-    
-    Complete1 --> End([終了])
-    Complete2 --> End
-    
-    style Start fill:#dae8fc,stroke:#6c8ebf
-    style End fill:#dae8fc,stroke:#6c8ebf
-    style BasicInfo fill:#e1d5e7,stroke:#9673a6
-    style ScreeningItems fill:#e1d5e7,stroke:#9673a6
-    style CriteriaItems fill:#e1d5e7,stroke:#9673a6
-    style TempSave fill:#fff2cc,stroke:#d6b656
-    style SaveTemp fill:#d5e8d4,stroke:#82b366
-    style ConfirmScreen fill:#e1d5e7,stroke:#9673a6
-    style SubmitApp fill:#e1d5e7,stroke:#9673a6
-    style SystemReview fill:#e1d5e7,stroke:#9673a6
-    style AppComplete fill:#d5e8d4,stroke:#82b366
-    style Complete1 fill:#d5e8d4,stroke:#82b366
-    style Complete2 fill:#d5e8d4,stroke:#82b366
-```
+#### A-1. システム初期設定
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 1 | SOLVER_STAFF | ログイン | システム | JWT認証でシステムにアクセス |
+| 2 | システム | 認証確認 | SOLVER_STAFF | 権限（APT/SOLVER_STAFF）を検証 |
+| 3 | SOLVER_STAFF | メニュー画面表示要求 | システム | URL: /solver/menu にアクセス |
+| 4 | システム | メニュー画面表示 | SOLVER_STAFF | ソルバーメニュー画面をレンダリング |
+| 5 | SOLVER_STAFF | 法人ソルバー選択 | システム | プルダウンから「法人ソルバーを選択する」 |
+| 6 | システム | 法人情報チェック | データベース | 選択した法人の登録状況を確認 |
 
-### ソルバー候補管理フロー
-```mermaid
-flowchart TD
-    Start([候補管理開始]) --> CandidateAction{👤 SOLVER_STAFF:<br/>アクションを選択}
-    
-    CandidateAction -->|新規申請| NewCandidate[👤 SOLVER_STAFF:<br/>新規ソルバー候補申請<br/>🎯 「新規ソルバー候補申請」]
-    CandidateAction -->|詳細表示| CandidateDetail[👤 SOLVER_STAFF:<br/>ソルバー候補詳細を表示<br/>👁️ 候補者詳細表示]
-    
-    NewCandidate --> CandidateInfo[👤 SOLVER_STAFF:<br/>候補者情報を入力<br/>📝 基本情報 + 能力情報]
-    CandidateInfo --> CandidateSubmit[🖥️ システム:<br/>候補者申請を処理<br/>🔗 API: POST /solver-candidates]
-    CandidateSubmit --> CandidateList[📋 候補者一覧に追加]
-    
-    CandidateDetail --> PromoteCheck{👤 SOLVER_STAFF:<br/>個人ソルバーに<br/>登録する？}
-    PromoteCheck -->|✅ Yes| PromoteConfirm[🖥️ システム:<br/>確認モーダル表示<br/>⚠️ 「個人ソルバーへの登録」]
-    PromoteCheck -->|❌ No| CandidateList
-    
-    PromoteConfirm --> PromoteSolver[🖥️ システム:<br/>個人ソルバーに登録<br/>🔗 API: PATCH /solvers/{id}]
-    PromoteSolver --> SolverList[📋 個人ソルバー一覧に移動]
-    
-    CandidateList --> End([終了])
-    SolverList --> End
-    
-    style Start fill:#dae8fc,stroke:#6c8ebf
-    style End fill:#dae8fc,stroke:#6c8ebf
-    style CandidateAction fill:#fff2cc,stroke:#d6b656
-    style NewCandidate fill:#e1d5e7,stroke:#9673a6
-    style CandidateDetail fill:#e1d5e7,stroke:#9673a6
-    style CandidateInfo fill:#e1d5e7,stroke:#9673a6
-    style CandidateSubmit fill:#e1d5e7,stroke:#9673a6
-    style PromoteCheck fill:#fff2cc,stroke:#d6b656
-    style PromoteConfirm fill:#f8cecc,stroke:#b85450
-    style PromoteSolver fill:#e1d5e7,stroke:#9673a6
-    style CandidateList fill:#d5e8d4,stroke:#82b366
-    style SolverList fill:#d5e8d4,stroke:#82b366
-```
+#### A-2. 法人情報未登録時の初期設定
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 7a | システム | 初期設定モーダル表示 | SOLVER_STAFF | 「法人ソルバー情報を入力してください」モーダル |
+| 8a | SOLVER_STAFF | 法人情報入力 | システム | 企業名、業種、設立等の基本情報を入力 |
+| 9a | システム | 法人情報保存 | データベース | API: POST /solver-corporations で保存 |
+| 10a | システム | 保存完了通知 | SOLVER_STAFF | 法人情報登録完了メッセージ表示 |
 
-### 稼働率・単価更新フロー
-```mermaid
-flowchart TD
-    Start([稼働率更新開始]) --> RateDisplay[🖥️ システム:<br/>更新対象を表示<br/>📊 所属個人ソルバー一覧]
-    RateDisplay --> RateInput[👤 SOLVER_STAFF:<br/>稼働率・単価を入力<br/>📈 今月・来月稼働率<br/>💰 人月・時間単価]
-    RateInput --> Validation[🖥️ システム:<br/>入力値をチェック<br/>✅ バリデーション実行]
-    Validation --> ValidationResult{🖥️ システム:<br/>入力値は正しい？}
-    
-    ValidationResult -->|❌ エラー| ErrorDisplay[🖥️ システム:<br/>エラーメッセージ表示<br/>❌ 「正しい値を入力してください」]
-    ErrorDisplay --> RateInput
-    
-    ValidationResult -->|✅ OK| BulkUpdate[🖥️ システム:<br/>一括更新を実行<br/>🔗 API: PUT /solvers/utilization-rate/{id}]
-    BulkUpdate --> UpdateResult{🖥️ システム:<br/>更新は成功？}
-    
-    UpdateResult -->|❌ 失敗| UpdateError[🖥️ システム:<br/>エラーメッセージ表示<br/>❌ 「更新に失敗しました」]
-    UpdateError --> RateInput
-    
-    UpdateResult -->|✅ 成功| UpdateComplete[🖥️ システム:<br/>更新完了通知を表示<br/>✅ 「更新が完了しました」]
-    UpdateComplete --> SolverList[📋 個人ソルバー一覧に戻る]
-    SolverList --> End([終了])
-    
-    style Start fill:#dae8fc,stroke:#6c8ebf
-    style End fill:#dae8fc,stroke:#6c8ebf
-    style RateDisplay fill:#e1d5e7,stroke:#9673a6
-    style RateInput fill:#e1d5e7,stroke:#9673a6
-    style Validation fill:#e1d5e7,stroke:#9673a6
-    style ValidationResult fill:#fff2cc,stroke:#d6b656
-    style ErrorDisplay fill:#f8cecc,stroke:#b85450
-    style BulkUpdate fill:#e1d5e7,stroke:#9673a6
-    style UpdateResult fill:#fff2cc,stroke:#d6b656
-    style UpdateError fill:#f8cecc,stroke:#b85450
-    style UpdateComplete fill:#d5e8d4,stroke:#82b366
-    style SolverList fill:#d5e8d4,stroke:#82b366
-```
+#### A-3. 新規申請開始
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 11 | SOLVER_STAFF | 新規申請ボタンクリック | システム | 「新規ソルバー申請」ボタンを押下 |
+| 12 | システム | 申請画面表示 | SOLVER_STAFF | URL: /solver/application に遷移 |
+| 13 | システム | フォーム初期化 | ブラウザ | 空の申請フォームを表示 |
 
-### エラーハンドリングフロー
-```mermaid
-flowchart TD
-    Error([エラー発生]) --> ErrorType{🖥️ システム:<br/>エラー種別判定}
-    
-    ErrorType -->|バリデーションエラー| ValidationError[🖥️ システム:<br/>バリデーションエラー表示<br/>❌ HTTPステータス: 400]
-    ErrorType -->|権限エラー| AuthError[🖥️ システム:<br/>権限エラー表示<br/>❌ HTTPステータス: 403]
-    ErrorType -->|データ不存在| NotFoundError[🖥️ システム:<br/>データ不存在エラー<br/>❌ HTTPステータス: 404]
-    ErrorType -->|更新競合| ConflictError[🖥️ システム:<br/>楽観ロックエラー<br/>❌ HTTPステータス: 409]
-    ErrorType -->|サーバーエラー| ServerError[🖥️ システム:<br/>内部サーバーエラー<br/>❌ HTTPステータス: 500]
-    
-    ValidationError --> ValidationDetail{🖥️ システム:<br/>詳細エラー判定}
-    ValidationDetail -->|必須項目未入力| RequiredError[❌ 「○○は必須項目です」]
-    ValidationDetail -->|形式不正| FormatError[❌ 「正しい形式で入力してください」]
-    ValidationDetail -->|条件付き必須| ConditionalError[❌ 「スクリーニング評価がはいの場合、<br/>エビデンスは必須です」]
-    ValidationDetail -->|ファイルエラー| FileError[❌ 「jpg, png形式で2MB以下の<br/>ファイルを選択してください」]
-    
-    AuthError --> AuthDetail{🖥️ システム:<br/>認証エラー詳細}
-    AuthDetail -->|未ログイン| LoginRequired[❌ 「ログインが必要です」]
-    AuthDetail -->|権限不足| InsufficientRole[❌ 「アクセス権限がありません」]
-    AuthDetail -->|他法人データ| CrossCorpError[❌ 「他法人のデータにはアクセスできません」]
-    
-    ConflictError --> ConflictDetail[❌ 「更新が競合した為、処理に失敗しました。<br/>再度、変更を入力してください」]
-    
-    RequiredError --> UserRetry[👤 SOLVER_STAFF:<br/>エラー修正・再入力]
-    FormatError --> UserRetry
-    ConditionalError --> UserRetry
-    FileError --> UserRetry
-    LoginRequired --> LoginPage[📍 ログイン画面へリダイレクト]
-    InsufficientRole --> AccessDenied[📍 403エラーページ表示]
-    CrossCorpError --> AccessDenied
-    ConflictDetail --> UserRetry
-    ServerError --> ErrorPage[📍 500エラーページ表示]
-    NotFoundError --> NotFoundPage[📍 404エラーページ表示]
-    
-    UserRetry --> RetryAction[👤 SOLVER_STAFF:<br/>修正後に再実行]
-    
-    style Error fill:#f8cecc,stroke:#b85450
-    style ErrorType fill:#fff2cc,stroke:#d6b656
-    style ValidationError fill:#f8cecc,stroke:#b85450
-    style AuthError fill:#f8cecc,stroke:#b85450
-    style NotFoundError fill:#f8cecc,stroke:#b85450
-    style ConflictError fill:#f8cecc,stroke:#b85450
-    style ServerError fill:#f8cecc,stroke:#b85450
-    style ValidationDetail fill:#fff2cc,stroke:#d6b656
-    style AuthDetail fill:#fff2cc,stroke:#d6b656
-    style RequiredError fill:#ffcccc,stroke:#ff0000
-    style FormatError fill:#ffcccc,stroke:#ff0000
-    style ConditionalError fill:#ffcccc,stroke:#ff0000
-    style FileError fill:#ffcccc,stroke:#ff0000
-    style LoginRequired fill:#ffcccc,stroke:#ff0000
-    style InsufficientRole fill:#ffcccc,stroke:#ff0000
-    style CrossCorpError fill:#ffcccc,stroke:#ff0000
-    style ConflictDetail fill:#ffcccc,stroke:#ff0000
-    style UserRetry fill:#e1d5e7,stroke:#9673a6
-    style RetryAction fill:#e1d5e7,stroke:#9673a6
-```
+#### A-4. 基本情報入力
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 14 | SOLVER_STAFF | 基本情報入力 | システム | 名前、ふりがな、性別、生年月日、職歴（必須） |
+| 15 | システム | リアルタイムバリデーション | SOLVER_STAFF | 入力値の形式チェック（メール、電話番号等） |
+| 16 | SOLVER_STAFF | プロフィール画像選択 | システム | jpg/png形式、2MB以下のファイル |
+| 17 | システム | ファイルバリデーション | ファイル | ファイル形式・サイズチェック |
+| 18 | システム | S3アップロード | AWS S3 | パス: photos/{corporateId}/{fileKeyId}/ |
+| 19 | システム | ファイルキー生成 | システム | UUID形式のファイルキーIDを生成 |
 
-### ファイルアップロードフロー
-```mermaid
-flowchart TD
-    FileStart([ファイル選択開始]) --> FileSelect[👤 SOLVER_STAFF:<br/>ファイルを選択<br/>📁 プロフィール画像または添付資料]
-    FileSelect --> FileValidation[🖥️ システム:<br/>ファイルバリデーション実行]
-    FileValidation --> FileCheck{🖥️ システム:<br/>ファイルは有効？}
-    
-    FileCheck -->|❌ ファイル形式不正| FormatError[❌ 「jpg, png形式のファイルを<br/>選択してください」]
-    FileCheck -->|❌ サイズ超過| SizeError[❌ 「ファイルサイズが大きすぎます<br/>（2MB以下）」]
-    FileCheck -->|✅ 有効| FileUpload[🖥️ システム:<br/>S3にファイルアップロード]
-    
-    FormatError --> FileSelect
-    SizeError --> FileSelect
-    
-    FileUpload --> UploadResult{🖥️ システム:<br/>アップロード成功？}
-    UploadResult -->|❌ 失敗| UploadError[❌ 「ファイルのアップロードに失敗しました」]
-    UploadResult -->|✅ 成功| UploadSuccess[✅ ファイルアップロード完了<br/>🔗 S3キー生成]
-    
-    UploadError --> FileSelect
-    UploadSuccess --> KeyGeneration[🖥️ システム:<br/>ファイルキーID生成<br/>📝 UUID形式]
-    KeyGeneration --> PathGeneration[🖥️ システム:<br/>S3パス生成<br/>📍 {type}/{corporateId}/{fileKeyId}/{fileName}]
-    PathGeneration --> FileComplete[✅ ファイル登録完了]
-    
-    FileComplete --> End([終了])
-    
-    style FileStart fill:#dae8fc,stroke:#6c8ebf
-    style End fill:#dae8fc,stroke:#6c8ebf
-    style FileSelect fill:#e1d5e7,stroke:#9673a6
-    style FileValidation fill:#e1d5e7,stroke:#9673a6
-    style FileCheck fill:#fff2cc,stroke:#d6b656
-    style FormatError fill:#f8cecc,stroke:#b85450
-    style SizeError fill:#f8cecc,stroke:#b85450
-    style FileUpload fill:#e1d5e7,stroke:#9673a6
-    style UploadResult fill:#fff2cc,stroke:#d6b656
-    style UploadError fill:#f8cecc,stroke:#b85450
-    style UploadSuccess fill:#d5e8d4,stroke:#82b366
-    style KeyGeneration fill:#e1d5e7,stroke:#9673a6
-    style PathGeneration fill:#e1d5e7,stroke:#9673a6
-    style FileComplete fill:#d5e8d4,stroke:#82b366
-```
+#### A-5. スクリーニング項目入力（8項目）
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 20 | SOLVER_STAFF | スクリーニング評価選択 | システム | 各項目で「はい/いいえ」を選択 |
+| 21 | システム | 条件付きバリデーション | SOLVER_STAFF | 「はい」選択時はエビデンス入力必須 |
+| 22 | SOLVER_STAFF | エビデンス入力 | システム | 「はい」選択項目のエビデンス（テキスト）を入力 |
+| 23 | システム | エビデンス必須チェック | システム | 「はい」項目にエビデンスが入力されているか確認 |
 
-### バリデーション詳細フロー
-```mermaid
-flowchart TD
-    ValidationStart([バリデーション開始]) --> ModeCheck{🖥️ システム:<br/>申請モード確認}
-    
-    ModeCheck -->|候補者申請| CandidateValidation[🖥️ システム:<br/>ソルバー候補申請<br/>バリデーション実行]
-    ModeCheck -->|個人ソルバー申請| SolverValidation[🖥️ システム:<br/>個人ソルバー申請<br/>バリデーション実行]
-    ModeCheck -->|一時保存| TempValidation[🖥️ システム:<br/>一時保存<br/>バリデーション実行]
-    
-    CandidateValidation --> CandidateRequired[🖥️ システム:<br/>候補者必須項目チェック<br/>📋 ふりがな、案件ID、生年月日、<br/>職歴、専門テーマ、実績]
-    
-    SolverValidation --> SolverRequired[🖥️ システム:<br/>個人ソルバー必須項目チェック<br/>📋 全32項目（基本情報+スキル+<br/>スクリーニング+クライテリア）]
-    
-    TempValidation --> TempRequired[🖥️ システム:<br/>一時保存必須項目チェック<br/>📋 最小限（名前、性別、法人ID）]
-    
-    CandidateRequired --> FormatCheck
-    SolverRequired --> FormatCheck
-    TempRequired --> FormatCheck
-    
-    FormatCheck[🖥️ システム:<br/>形式チェック実行] --> FormatResult{🖥️ システム:<br/>形式は正しい？}
-    
-    FormatResult -->|❌ エラー| FormatErrorDetail[❌ 形式エラー詳細表示<br/>・メール形式不正<br/>・電話番号形式不正<br/>・日付形式不正<br/>・単価上限＜下限]
-    FormatResult -->|✅ OK| ScreeningCheck[🖥️ システム:<br/>スクリーニング項目<br/>条件付きバリデーション]
-    
-    ScreeningCheck --> ScreeningResult{🖥️ システム:<br/>スクリーニング評価が<br/>「はい」の項目あり？}
-    ScreeningResult -->|Yes| EvidenceCheck[🖥️ システム:<br/>該当項目のエビデンス<br/>必須チェック]
-    ScreeningResult -->|No| ValidationComplete
-    
-    EvidenceCheck --> EvidenceResult{🖥️ システム:<br/>エビデンスは<br/>入力済み？}
-    EvidenceResult -->|❌ 未入力| EvidenceError[❌ 「スクリーニング評価が「はい」の場合、<br/>エビデンスは必須項目です」]
-    EvidenceResult -->|✅ 入力済み| ValidationComplete[✅ バリデーション完了]
-    
-    FormatErrorDetail --> ValidationError([❌ バリデーションエラー])
-    EvidenceError --> ValidationError
-    ValidationComplete --> ValidationSuccess([✅ バリデーション成功])
-    
-    style ValidationStart fill:#dae8fc,stroke:#6c8ebf
-    style ValidationError fill:#f8cecc,stroke:#b85450
-    style ValidationSuccess fill:#d5e8d4,stroke:#82b366
-    style ModeCheck fill:#fff2cc,stroke:#d6b656
-    style FormatResult fill:#fff2cc,stroke:#d6b656
-    style ScreeningResult fill:#fff2cc,stroke:#d6b656
-    style EvidenceResult fill:#fff2cc,stroke:#d6b656
-    style CandidateValidation fill:#e1d5e7,stroke:#9673a6
-    style SolverValidation fill:#e1d5e7,stroke:#9673a6
-    style TempValidation fill:#e1d5e7,stroke:#9673a6
-    style CandidateRequired fill:#fff2cc,stroke:#d6b656
-    style SolverRequired fill:#fff2cc,stroke:#d6b656
-    style TempRequired fill:#fff2cc,stroke:#d6b656
-    style FormatCheck fill:#e1d5e7,stroke:#9673a6
-    style ScreeningCheck fill:#e1d5e7,stroke:#9673a6
-    style EvidenceCheck fill:#e1d5e7,stroke:#9673a6
-    style FormatErrorDetail fill:#f8cecc,stroke:#b85450
-    style EvidenceError fill:#f8cecc,stroke:#b85450
-    style ValidationComplete fill:#d5e8d4,stroke:#82b366
-```
+#### A-6. クライテリア項目入力（8項目）
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 24 | SOLVER_STAFF | クライテリアエビデンス入力 | システム | 8項目すべてにエビデンス（テキスト）を入力 |
+| 25 | システム | 必須項目チェック | システム | クライテリア項目の入力完了を確認 |
+
+#### A-7. 申請実行・完了
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 26 | SOLVER_STAFF | 確認画面遷移 | システム | 「確認画面に進む」ボタンクリック |
+| 27 | システム | 全項目バリデーション | データ | 32項目すべての必須項目チェック |
+| 28 | システム | 確認画面表示 | SOLVER_STAFF | 入力内容の最終確認画面を表示 |
+| 29 | SOLVER_STAFF | 申請実行 | システム | 「申請する」ボタンクリック |
+| 30 | システム | API呼び出し | バックエンド | POST /solvers でデータ保存 |
+| 31 | システム | データベース保存 | DynamoDB | SolverModelにデータを保存 |
+| 32 | システム | Salesforce連携 | 外部システム | 新規ソルバー登録メール送信 |
+| 33 | システム | 申請完了通知 | SOLVER_STAFF | 「申請が完了しました」メッセージ表示 |
+
+#### A-8. 一時保存フロー（オプション）
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 26b | SOLVER_STAFF | 一時保存実行 | システム | 任意のタイミングで「一時保存」ボタンクリック |
+| 27b | システム | 最小限バリデーション | データ | 名前、性別、法人IDの最低限チェック |
+| 28b | システム | 一時保存実行 | データベース | registration_status="temporary_saving"で保存 |
+| 29b | システム | 一時保存完了通知 | SOLVER_STAFF | 「一時保存しました」メッセージ表示 |
+| 30b | システム | 自動リダイレクト | SOLVER_STAFF | 3秒後に個人ソルバー一覧画面へ遷移 |
+
+---
+
+### 🔄 B. ソルバー候補管理フロー
+
+#### B-1. 候補者申請
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 1 | SOLVER_STAFF | 候補者一覧表示要求 | システム | 「ソルバー候補」メニューをクリック |
+| 2 | システム | 候補者一覧表示 | SOLVER_STAFF | GET /solvers?solverType=solver_candidate |
+| 3 | SOLVER_STAFF | 新規候補申請 | システム | 「新規ソルバー候補申請」ボタンクリック |
+| 4 | SOLVER_STAFF | 候補者情報入力 | システム | 基本情報（ふりがな、案件ID、生年月日、職歴、専門テーマ、実績） |
+| 5 | システム | 候補者バリデーション | データ | mode="create_candidate"でのバリデーション実行 |
+| 6 | システム | 候補者データ保存 | データベース | POST /solvers でmode="create_candidate" |
+| 7 | システム | 候補者一覧更新 | SOLVER_STAFF | 新規候補者を一覧に追加表示 |
+
+#### B-2. 候補者から個人ソルバーへの昇格
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 8 | SOLVER_STAFF | 候補者詳細表示 | システム | 候補者名をクリックして詳細画面へ |
+| 9 | システム | 候補者詳細表示 | SOLVER_STAFF | GET /solvers/{solver_id} で詳細データ取得 |
+| 10 | SOLVER_STAFF | 個人ソルバー登録判断 | システム | 「個人ソルバーに登録する」ボタンクリック |
+| 11 | システム | 確認モーダル表示 | SOLVER_STAFF | 「個人ソルバーへの登録」確認ダイアログ |
+| 12 | システム | 注意事項表示 | SOLVER_STAFF | 「登録後はソルバー候補一覧からは削除されます」 |
+| 13 | SOLVER_STAFF | 昇格確定 | システム | 確認モーダルで「登録する」ボタンクリック |
+| 14 | システム | ステータス更新 | データベース | PATCH /solvers/{solver_id} でis_solver=true |
+| 15 | システム | 候補者一覧から削除 | SOLVER_STAFF | 候補者一覧画面から該当者を除外 |
+| 16 | システム | 個人ソルバー一覧に追加 | SOLVER_STAFF | 個人ソルバー一覧に新規登録者を表示 |
+
+---
+
+### 🔄 C. 稼働率・単価更新フロー
+
+#### C-1. 更新画面表示
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 1 | SOLVER_STAFF | 稼働率更新メニュー選択 | システム | 「稼働率・単価更新」ボタンクリック |
+| 2 | システム | 更新対象データ取得 | データベース | GET /solvers で所属個人ソルバー一覧取得 |
+| 3 | システム | 更新画面表示 | SOLVER_STAFF | テーブル形式で個人ソルバー一覧を表示 |
+
+#### C-2. 稼働率・単価入力
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 4 | SOLVER_STAFF | 稼働率入力 | システム | 今月・来月の稼働率（0-100%）を入力 |
+| 5 | SOLVER_STAFF | 単価入力 | システム | 人月単価・時間単価（上限・下限）を入力 |
+| 6 | システム | リアルタイムバリデーション | SOLVER_STAFF | 数値範囲、上限≥下限の制約チェック |
+
+#### C-3. 一括更新実行
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 7 | SOLVER_STAFF | 一括更新実行 | システム | 「一括更新」ボタンクリック |
+| 8 | システム | 全データバリデーション | データ | 入力値の妥当性を最終確認 |
+| 9 | システム | API呼び出し | バックエンド | PUT /solvers/utilization-rate/{solver_corporation_id} |
+| 10 | システム | 楽観ロック制御 | データベース | Versionによる同時更新制御 |
+| 11 | システム | 一括更新実行 | DynamoDB | 複数ソルバーの稼働率・単価を同時更新 |
+| 12 | システム | 更新結果判定 | システム | 成功・失敗・部分的成功を判定 |
+| 13 | システム | 更新完了通知 | SOLVER_STAFF | 「更新が完了しました」または エラーメッセージ |
+
+---
+
+### 🔄 D. エラーハンドリングフロー
+
+#### D-1. バリデーションエラー（HTTPステータス: 400）
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 1 | システム | エラー種別判定 | システム | リクエストデータの検証結果を判定 |
+| 2 | システム | エラーメッセージ生成 | システム | 具体的なエラー内容を特定 |
+| 3 | システム | エラー表示 | SOLVER_STAFF | 「{項目名} is required.」等の詳細メッセージ |
+| 4 | SOLVER_STAFF | エラー修正 | システム | 指摘された項目を修正して再入力 |
+| 5 | システム | 再バリデーション | データ | 修正後のデータを再度検証 |
+
+#### D-2. 権限エラー（HTTPステータス: 403）
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 1 | システム | 権限チェック | ユーザー | JWT Tokenの権限情報を確認 |
+| 2 | システム | アクセス拒否 | SOLVER_STAFF | 「アクセス権限がありません」メッセージ |
+| 3 | システム | 403エラーページ表示 | SOLVER_STAFF | 権限不足による画面表示 |
+| 4 | SOLVER_STAFF | 適切な権限でログイン | システム | APTまたはSOLVER_STAFFでの再ログイン |
+
+#### D-3. 更新競合エラー（HTTPステータス: 409）
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 1 | システム | 楽観ロック検証 | データベース | DynamoDBのVersionAttributeをチェック |
+| 2 | システム | 競合検出 | システム | 他のユーザーによる同時更新を検出 |
+| 3 | システム | 競合エラー通知 | SOLVER_STAFF | 「更新が競合した為、処理に失敗しました」 |
+| 4 | システム | 最新データ取得 | データベース | 現在の最新データを再取得 |
+| 5 | SOLVER_STAFF | 最新データで再入力 | システム | 更新された内容を反映して再度入力 |
+
+#### D-4. ファイルアップロードエラー
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 1 | SOLVER_STAFF | ファイル選択 | システム | jpg/png形式の画像ファイルを選択 |
+| 2 | システム | ファイル検証 | ファイル | 形式（jpg/png）・サイズ（2MB以下）をチェック |
+| 3 | システム | エラー検出 | システム | 形式不正またはサイズ超過を検出 |
+| 4 | システム | エラーメッセージ表示 | SOLVER_STAFF | 「jpg, png形式で2MB以下のファイルを選択してください」 |
+| 5 | SOLVER_STAFF | 適切なファイル再選択 | システム | 条件を満たすファイルに変更 |
+| 6 | システム | S3アップロード | AWS S3 | 検証済みファイルをS3にアップロード |
 
 ---
 
