--- a/pg/iret/FO/ソルバーソーシング機能フローチャート.md
+++ b/pg/iret/FO/ソルバーソーシング機能フローチャート.md
@@ -31,142 +31,245 @@
 
 ---
 
-## 📋 人材要件機能 時系列アクションフロー
+## 📋 人材要件機能 時系列アクションフロー（業務プロセス完全版）
 
-### 🔄 A. 新規個人ソルバー申請フロー（完全版）
+> **注意**: このフローには、システム操作だけでなく、実際の業務で必要となるオフライン作業（面接、審査、選定等）も含まれています。
 
-#### A-1. システム初期設定
+### 🔄 A. 人材発掘・ソルバー候補選定フロー（業務開始前）
+
+#### A-1. 人材要件定義・ソルバー発掘
 | 順番 | 誰が | アクション | 誰に | 詳細 |
 |-----|-----|-----------|-----|------|
-| 1 | SOLVER_STAFF | ログイン | システム | JWT認証でシステムにアクセス |
-| 2 | システム | 認証確認 | SOLVER_STAFF | 権限（APT/SOLVER_STAFF）を検証 |
-| 3 | SOLVER_STAFF | メニュー画面表示要求 | システム | URL: /solver/menu にアクセス |
-| 4 | システム | メニュー画面表示 | SOLVER_STAFF | ソルバーメニュー画面をレンダリング |
-| 5 | SOLVER_STAFF | 法人ソルバー選択 | システム | プルダウンから「法人ソルバーを選択する」 |
-| 6 | システム | 法人情報チェック | データベース | 選択した法人の登録状況を確認 |
+| 1 | APT | 案件要件分析 | 案件資料 | クライアントからの案件内容、必要スキル、期間を分析 |
+| 2 | APT | 人材要件定義 | 社内 | 必要な専門性、経験年数、業界知識を明文化 |
+| 3 | APT | ソルバー候補リストアップ | 外部ネットワーク | 既存のコネクション、外部データベースから候補者を選定 |
+| 4 | APT | 初回コンタクト | 候補者 | 電話・メール・LinkedInで案件概要を説明、関心度を確認 |
+| 5 | 候補者 | 案件興味度回答 | APT | 案件参加の意向、条件面での要望を回答 |
+| 6 | APT | 候補者スクリーニング | 社内 | 履歴書・経歴書の確認、基本要件マッチング |
 
-#### A-2. 法人情報未登録時の初期設定
+#### A-2. 候補者面接・評価プロセス
 | 順番 | 誰が | アクション | 誰に | 詳細 |
 |-----|-----|-----------|-----|------|
-| 7a | システム | 初期設定モーダル表示 | SOLVER_STAFF | 「法人ソルバー情報を入力してください」モーダル |
-| 8a | SOLVER_STAFF | 法人情報入力 | システム | 企業名、業種、設立等の基本情報を入力 |
-| 9a | システム | 法人情報保存 | データベース | API: POST /solver-corporations で保存 |
-| 10a | システム | 保存完了通知 | SOLVER_STAFF | 法人情報登録完了メッセージ表示 |
+| 7 | APT | 面接スケジュール調整 | 候補者 | 1次面接の日程調整（オンライン/オフライン） |
+| 8 | APT + 社内関係者 | 1次面接実施 | 候補者 | 人物評価、基本スキル確認、コミュニケーション能力チェック |
+| 9 | APT | 面接評価シート作成 | 社内 | 面接結果をスクリーニング8項目で評価・記録 |
+| 10 | 候補者 | 職歴詳細・実績資料提出 | APT | 詳細な職歴書、成果物、推薦状等を提出 |
+| 11 | APT | 実績・エビデンス検証 | 外部 | 提出資料の真偽確認、前職での実績を第三者確認 |
+| 12 | APT | クライテリア評価実施 | 社内 | 8項目のクライテリアに基づく詳細評価 |
+| 13 | APT | 専門性深堀面接実施 | 候補者 | 業界特有の知識・経験についての詳細ヒアリング |
+| 14 | APT | 過去プロジェクト実績確認 | 候補者 | 具体的な成果物、クライアント名、期間、役割の詳細確認 |
+| 15 | APT | 参考人確認・推薦状検証 | 前職関係者 | 候補者の実績・人物評価について第三者への確認 |
 
-#### A-3. 新規申請開始
+#### A-3. 最終選考・条件調整
 | 順番 | 誰が | アクション | 誰に | 詳細 |
 |-----|-----|-----------|-----|------|
-| 11 | SOLVER_STAFF | 新規申請ボタンクリック | システム | 「新規ソルバー申請」ボタンを押下 |
-| 12 | システム | 申請画面表示 | SOLVER_STAFF | URL: /solver/application に遷移 |
-| 13 | システム | フォーム初期化 | ブラウザ | 空の申請フォームを表示 |
+| 16 | APT | 社内選考会議 | 社内関係者 | 候補者の評価結果を基に採用可否を判断 |
+| 17 | APT | 2次面接実施（必要時） | 候補者 | 上級職・専門性が必要な場合の追加面接 |
+| 18 | APT | 最終採用決定 | 社内 | 候補者の正式採用を決定 |
+| 19 | APT | 条件交渉 | 候補者 | 報酬、稼働率、契約期間等の条件を交渉・合意 |
+| 20 | 候補者 | 契約条件合意 | APT | 提示条件への最終同意 |
+| 21 | APT | 契約準備 | 法務・総務 | 契約書類の準備、法的確認 |
+| 22 | APT | 候補者への最終確認 | 候補者 | 契約内容、開始日、業務内容の最終確認 |
+| 23 | APT | クライアント承認取得 | クライアント | 選定した候補者についてクライアントの最終承認を取得 |
+| 24 | クライアント | 候補者承認・面談実施 | 候補者 | 必要に応じてクライアントと候補者の直接面談 |
 
-#### A-4. 基本情報入力
+### 🔄 B. 新規個人ソルバー申請フロー（システム登録）
+
+#### B-1. システム初期設定
 | 順番 | 誰が | アクション | 誰に | 詳細 |
 |-----|-----|-----------|-----|------|
-| 14 | SOLVER_STAFF | 基本情報入力 | システム | 名前、ふりがな、性別、生年月日、職歴（必須） |
-| 15 | システム | リアルタイムバリデーション | SOLVER_STAFF | 入力値の形式チェック（メール、電話番号等） |
-| 16 | SOLVER_STAFF | プロフィール画像選択 | システム | jpg/png形式、2MB以下のファイル |
-| 17 | システム | ファイルバリデーション | ファイル | ファイル形式・サイズチェック |
-| 18 | システム | S3アップロード | AWS S3 | パス: photos/{corporateId}/{fileKeyId}/ |
-| 19 | システム | ファイルキー生成 | システム | UUID形式のファイルキーIDを生成 |
+| 19 | SOLVER_STAFF | ログイン | システム | JWT認証でシステムにアクセス |
+| 20 | システム | 認証確認 | SOLVER_STAFF | 権限（APT/SOLVER_STAFF）を検証 |
+| 21 | SOLVER_STAFF | メニュー画面表示要求 | システム | URL: /solver/menu にアクセス |
+| 22 | システム | メニュー画面表示 | SOLVER_STAFF | ソルバーメニュー画面をレンダリング |
+| 23 | SOLVER_STAFF | 法人ソルバー選択 | システム | プルダウンから「法人ソルバーを選択する」 |
+| 24 | システム | 法人情報チェック | データベース | 選択した法人の登録状況を確認 |
 
-#### A-5. スクリーニング項目入力（8項目）
+#### B-2. 法人情報未登録時の初期設定
 | 順番 | 誰が | アクション | 誰に | 詳細 |
 |-----|-----|-----------|-----|------|
-| 20 | SOLVER_STAFF | スクリーニング評価選択 | システム | 各項目で「はい/いいえ」を選択 |
-| 21 | システム | 条件付きバリデーション | SOLVER_STAFF | 「はい」選択時はエビデンス入力必須 |
-| 22 | SOLVER_STAFF | エビデンス入力 | システム | 「はい」選択項目のエビデンス（テキスト）を入力 |
-| 23 | システム | エビデンス必須チェック | システム | 「はい」項目にエビデンスが入力されているか確認 |
+| 25a | システム | 初期設定モーダル表示 | SOLVER_STAFF | 「法人ソルバー情報を入力してください」モーダル |
+| 26a | SOLVER_STAFF | 法人情報入力 | システム | 企業名、業種、設立等の基本情報を入力 |
+| 27a | システム | 法人情報保存 | データベース | API: POST /solver-corporations で保存 |
+| 28a | システム | 保存完了通知 | SOLVER_STAFF | 法人情報登録完了メッセージ表示 |
 
-#### A-6. クライテリア項目入力（8項目）
+#### B-3. 新規申請開始
 | 順番 | 誰が | アクション | 誰に | 詳細 |
 |-----|-----|-----------|-----|------|
-| 24 | SOLVER_STAFF | クライテリアエビデンス入力 | システム | 8項目すべてにエビデンス（テキスト）を入力 |
-| 25 | システム | 必須項目チェック | システム | クライテリア項目の入力完了を確認 |
+| 25 | SOLVER_STAFF | 新規申請ボタンクリック | システム | 「新規ソルバー申請」ボタンを押下 |
+| 26 | システム | 申請画面表示 | SOLVER_STAFF | URL: /solver/application に遷移 |
+| 27 | システム | フォーム初期化 | ブラウザ | 空の申請フォームを表示 |
 
-#### A-7. 申請実行・完了
+#### B-4. 面接結果・評価データの入力
 | 順番 | 誰が | アクション | 誰に | 詳細 |
 |-----|-----|-----------|-----|------|
-| 26 | SOLVER_STAFF | 確認画面遷移 | システム | 「確認画面に進む」ボタンクリック |
-| 27 | システム | 全項目バリデーション | データ | 32項目すべての必須項目チェック |
-| 28 | システム | 確認画面表示 | SOLVER_STAFF | 入力内容の最終確認画面を表示 |
-| 29 | SOLVER_STAFF | 申請実行 | システム | 「申請する」ボタンクリック |
-| 30 | システム | API呼び出し | バックエンド | POST /solvers でデータ保存 |
-| 31 | システム | データベース保存 | DynamoDB | SolverModelにデータを保存 |
-| 32 | システム | Salesforce連携 | 外部システム | 新規ソルバー登録メール送信 |
-| 33 | システム | 申請完了通知 | SOLVER_STAFF | 「申請が完了しました」メッセージ表示 |
+| 28 | SOLVER_STAFF | 基本情報入力 | システム | 面接で確認した正確な名前、ふりがな、性別、生年月日、職歴 |
+| 29 | SOLVER_STAFF | 面接評価結果入力 | システム | 事前面接で評価したスクリーニング8項目の結果を入力 |
+| 30 | SOLVER_STAFF | エビデンス詳細入力 | システム | 面接・資料確認で得たエビデンス（具体的な実績・経験）を入力 |
+| 31 | システム | リアルタイムバリデーション | SOLVER_STAFF | 入力値の形式チェック（メール、電話番号等） |
+| 32 | SOLVER_STAFF | プロフィール画像アップロード | システム | 候補者から提供された顔写真（jpg/png形式、2MB以下） |
+| 33 | システム | ファイルバリデーション | ファイル | ファイル形式・サイズチェック |
+| 34 | システム | S3アップロード | AWS S3 | パス: photos/{corporateId}/{fileKeyId}/ |
+| 35 | システム | ファイルキー生成 | システム | UUID形式のファイルキーIDを生成 |
 
-#### A-8. 一時保存フロー（オプション）
+#### B-5. スクリーニング項目入力（面接評価反映）
 | 順番 | 誰が | アクション | 誰に | 詳細 |
 |-----|-----|-----------|-----|------|
-| 26b | SOLVER_STAFF | 一時保存実行 | システム | 任意のタイミングで「一時保存」ボタンクリック |
-| 27b | システム | 最小限バリデーション | データ | 名前、性別、法人IDの最低限チェック |
-| 28b | システム | 一時保存実行 | データベース | registration_status="temporary_saving"で保存 |
-| 29b | システム | 一時保存完了通知 | SOLVER_STAFF | 「一時保存しました」メッセージ表示 |
-| 30b | システム | 自動リダイレクト | SOLVER_STAFF | 3秒後に個人ソルバー一覧画面へ遷移 |
+| 36 | SOLVER_STAFF | スクリーニング評価入力 | システム | 事前面接・資料確認で評価した8項目の「はい/いいえ」を入力 |
+| 37 | システム | 条件付きバリデーション | SOLVER_STAFF | 「はい」選択時はエビデンス入力必須の確認 |
+| 38 | SOLVER_STAFF | エビデンス詳細入力 | システム | 面接で確認した具体的な実績・経験をエビデンスとして詳述 |
+| 39 | システム | エビデンス必須チェック | システム | 「はい」項目にエビデンスが十分に入力されているか確認 |
+
+#### B-6. クライテリア項目入力（評価結果反映）
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 40 | SOLVER_STAFF | クライテリア評価入力 | システム | 面接・審査で評価した8項目のエビデンスを詳細に入力 |
+| 41 | システム | 必須項目チェック | システム | クライテリア項目の入力完了を確認 |
+
+#### B-7. 申請実行・完了
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 42 | SOLVER_STAFF | 確認画面遷移 | システム | 「確認画面に進む」ボタンクリック |
+| 43 | システム | 全項目バリデーション | データ | 32項目すべての必須項目チェック |
+| 44 | システム | 確認画面表示 | SOLVER_STAFF | 入力内容の最終確認画面を表示 |
+| 45 | SOLVER_STAFF | 申請実行 | システム | 「申請する」ボタンクリック |
+| 46 | システム | API呼び出し | バックエンド | POST /solvers でデータ保存 |
+| 47 | システム | データベース保存 | DynamoDB | SolverModelにデータを保存 |
+| 48 | システム | Salesforce連携 | 外部システム | 新規ソルバー登録メール送信 |
+| 49 | システム | 申請完了通知 | SOLVER_STAFF | 「申請が完了しました」メッセージ表示 |
 
 ---
 
-### 🔄 B. ソルバー候補管理フロー
+### 🔄 C. ソルバー登録後の業務開始プロセス
 
-#### B-1. 候補者申請
+#### C-1. 契約・オンボーディング
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 50 | APT | 正式契約書作成 | 法務 | 合意した条件に基づく契約書を作成 |
+| 51 | 法務 | 契約書レビュー | APT | 法的問題がないか契約書を最終確認 |
+| 52 | APT | 契約書送付 | 個人ソルバー | 正式契約書を個人ソルバーに送付 |
+| 53 | 個人ソルバー | 契約書確認・署名 | APT | 契約内容を確認し、署名・返送 |
+| 54 | APT | 契約締結完了 | 社内 | 契約書の相互署名で契約成立 |
+| 55 | APT | オンボーディング準備 | 社内 | 業務開始に向けた準備（アカウント作成、資料準備等） |
+| 56 | APT | 業務環境準備 | 社内・個人ソルバー | 必要なツール、システムアクセス権限の設定 |
+| 57 | APT | プロジェクト資料提供 | 個人ソルバー | 案件概要、スケジュール、成果物仕様書等を提供 |
+| 58 | APT | キックオフミーティング実施 | 個人ソルバー | プロジェクト概要、役割、進め方を説明 |
+| 59 | 個人ソルバー | 秘密保持契約締結 | APT | 案件に関する機密保持契約を締結 |
+| 60 | 個人ソルバー | 業務理解・質疑応答 | APT | 案件内容、期待する成果について詳細確認 |
+
+#### C-2. 業務開始・進捗管理
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 61 | APT | 業務開始通知 | クライアント | ソルバーのアサインと業務開始を報告 |
+| 62 | 個人ソルバー | 業務開始 | クライアント | 実際のプロジェクト業務を開始 |
+| 63 | APT | 初期進捗確認 | 個人ソルバー | 開始1週間後の状況、課題、サポート要望の確認 |
+| 64 | APT | 定期進捗確認 | 個人ソルバー | 週次/月次での業務進捗、課題を確認 |
+| 65 | 個人ソルバー | 進捗レポート提出 | APT | 業務の進捗状況、成果、課題を報告 |
+| 66 | APT | クライアント報告 | クライアント | ソルバーの業務進捗をクライアントに報告 |
+| 67 | クライアント | フィードバック提供 | APT | ソルバーの業務品質、パフォーマンスを評価 |
+| 68 | APT | 中間評価・改善提案 | 個人ソルバー | プロジェクト中間期での評価とパフォーマンス改善提案 |
+| 69 | APT | 追加支援・リソース提供 | 個人ソルバー | 必要に応じて追加のサポート、情報、リソースを提供 |
+
+#### C-3. 継続的な関係管理・品質管理
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 70 | APT | 月次パフォーマンスレビュー | 個人ソルバー・クライアント | 月次での成果、課題、改善点について三者レビュー |
+| 71 | APT | スキルアップ支援プログラム提供 | 個人ソルバー | 新しい技術、手法、業界トレンドに関する研修機会の提供 |
+| 72 | APT | ネットワーキング機会提供 | 個人ソルバー | 他のソルバー、業界専門家とのネットワーキング機会の提供 |
+| 73 | APT | 次期案件の提案・マッチング | 個人ソルバー | 現在のプロジェクト終了後の次期案件の提案 |
+| 74 | 個人ソルバー | 自己開発・キャリア相談 | APT | キャリア目標、スキル開発に関する相談・アドバイス要請 |
+| 75 | APT | 長期関係維持戦略検討 | 社内 | 優秀なソルバーとの長期的なパートナーシップ維持戦略 |
+
+#### C-4. プロジェクト終了・フォローアップ
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 76 | APT | プロジェクト終了レビュー実施 | 個人ソルバー・クライアント | プロジェクトの成果、学び、改善点について総括レビュー |
+| 77 | クライアント | 最終評価・推薦状作成 | APT | ソルバーの最終的なパフォーマンス評価と推薦状作成 |
+| 78 | APT | ナレッジベース・ベストプラクティス集約 | 社内 | プロジェクトで得られた知見、ノイハウを社内で共有 |
+| 79 | APT | ソルバーデータベース更新 | システム | プロジェクト実績、評価、スキル情報をデータベースに更新 |
+| 80 | APT | 次期連携可能性検討 | 個人ソルバー | 将来のプロジェクトでの連携可能性、条件、タイミングの検討 |
+
+### 🔄 D. ソルバー候補管理フロー（簡易登録）
+
+#### D-1. 候補者申請
 | 順番 | 誰が | アクション | 誰に | 詳細 |
 |-----|-----|-----------|-----|------|
 | 1 | SOLVER_STAFF | 候補者一覧表示要求 | システム | 「ソルバー候補」メニューをクリック |
 | 2 | システム | 候補者一覧表示 | SOLVER_STAFF | GET /solvers?solverType=solver_candidate |
 | 3 | SOLVER_STAFF | 新規候補申請 | システム | 「新規ソルバー候補申請」ボタンクリック |
-| 4 | SOLVER_STAFF | 候補者情報入力 | システム | 基本情報（ふりがな、案件ID、生年月日、職歴、専門テーマ、実績） |
+| 4 | SOLVER_STAFF | 候補者基本情報入力 | システム | 初回面接前の基本情報（ふりがな、案件ID、生年月日、職歴、専門テーマ、実績） |
 | 5 | システム | 候補者バリデーション | データ | mode="create_candidate"でのバリデーション実行 |
 | 6 | システム | 候補者データ保存 | データベース | POST /solvers でmode="create_candidate" |
 | 7 | システム | 候補者一覧更新 | SOLVER_STAFF | 新規候補者を一覧に追加表示 |
 
-#### B-2. 候補者から個人ソルバーへの昇格
+#### D-2. 候補者から個人ソルバーへの昇格（詳細面接後）
 | 順番 | 誰が | アクション | 誰に | 詳細 |
 |-----|-----|-----------|-----|------|
 | 8 | SOLVER_STAFF | 候補者詳細表示 | システム | 候補者名をクリックして詳細画面へ |
 | 9 | システム | 候補者詳細表示 | SOLVER_STAFF | GET /solvers/{solver_id} で詳細データ取得 |
-| 10 | SOLVER_STAFF | 個人ソルバー登録判断 | システム | 「個人ソルバーに登録する」ボタンクリック |
-| 11 | システム | 確認モーダル表示 | SOLVER_STAFF | 「個人ソルバーへの登録」確認ダイアログ |
-| 12 | システム | 注意事項表示 | SOLVER_STAFF | 「登録後はソルバー候補一覧からは削除されます」 |
-| 13 | SOLVER_STAFF | 昇格確定 | システム | 確認モーダルで「登録する」ボタンクリック |
-| 14 | システム | ステータス更新 | データベース | PATCH /solvers/{solver_id} でis_solver=true |
-| 15 | システム | 候補者一覧から削除 | SOLVER_STAFF | 候補者一覧画面から該当者を除外 |
-| 16 | システム | 個人ソルバー一覧に追加 | SOLVER_STAFF | 個人ソルバー一覧に新規登録者を表示 |
+| 10 | SOLVER_STAFF | 面接・審査実施 | 候補者 | 詳細面接、スクリーニング・クライテリア評価を実施 |
+| 11 | SOLVER_STAFF | 個人ソルバー登録判断 | システム | 面接結果を基に「個人ソルバーに登録する」ボタンクリック |
+| 12 | システム | 確認モーダル表示 | SOLVER_STAFF | 「個人ソルバーへの登録」確認ダイアログ |
+| 13 | システム | 注意事項表示 | SOLVER_STAFF | 「登録後はソルバー候補一覧からは削除されます」 |
+| 14 | SOLVER_STAFF | 昇格確定 | システム | 確認モーダルで「登録する」ボタンクリック |
+| 15 | システム | ステータス更新 | データベース | PATCH /solvers/{solver_id} でis_solver=true |
+| 16 | システム | 候補者一覧から削除 | SOLVER_STAFF | 候補者一覧画面から該当者を除外 |
+| 17 | システム | 個人ソルバー一覧に追加 | SOLVER_STAFF | 個人ソルバー一覧に新規登録者を表示 |
+| 18 | SOLVER_STAFF | 詳細情報入力開始 | システム | 面接結果を基に32項目の詳細情報を入力（Bフローに続く） |
 
 ---
 
-### 🔄 C. 稼働率・単価更新フロー
+### 🔄 E. 稼働率・単価更新フロー（月次業務プロセス）
 
-#### C-1. 更新画面表示
+#### E-0. 月次情報収集・分析（システム更新前）
 | 順番 | 誰が | アクション | 誰に | 詳細 |
 |-----|-----|-----------|-----|------|
-| 1 | SOLVER_STAFF | 稼働率更新メニュー選択 | システム | 「稼働率・単価更新」ボタンクリック |
-| 2 | システム | 更新対象データ取得 | データベース | GET /solvers で所属個人ソルバー一覧取得 |
-| 3 | システム | 更新画面表示 | SOLVER_STAFF | テーブル形式で個人ソルバー一覧を表示 |
+| 1 | APT | 月次稼働状況ヒアリング | 個人ソルバー | 各ソルバーの実際稼働状況、来月の予定をヒアリング |
+| 2 | 個人ソルバー | 稼働状況・予定報告 | APT | 現在のプロジェクト状況、来月以降の予定を報告 |
+| 3 | APT | マーケット単価調査 | 外部情報 | 業界全体の単価動向、競合他社の料金水準を調査 |
+| 4 | APT | クライアントフィードバック収集 | クライアント | ソルバーのパフォーマンス評価、料金に対する意見を収集 |
+| 5 | APT | 単価改定提案準備 | 社内 | パフォーマンス、市場価格、クライアント評価を踏まえた単価改定案を作成 |
 
-#### C-2. 稼働率・単価入力
+#### E-1. 更新前の時間調整・交渉
 | 順番 | 誰が | アクション | 誰に | 詳細 |
 |-----|-----|-----------|-----|------|
-| 4 | SOLVER_STAFF | 稼働率入力 | システム | 今月・来月の稼働率（0-100%）を入力 |
-| 5 | SOLVER_STAFF | 単価入力 | システム | 人月単価・時間単価（上限・下限）を入力 |
-| 6 | システム | リアルタイムバリデーション | SOLVER_STAFF | 数値範囲、上限≥下限の制約チェック |
+| 6 | APT | 個別単価交渉 | 個人ソルバー | パフォーマンス向上や市場価格を踏まえた単価調整の提案・交渉 |
+| 7 | 個人ソルバー | 単価改定に対する意見表明 | APT | 提案された単価に対する意見、要望、交渉 |
+| 8 | APT | クライアントへの単価調整相談 | クライアント | 必要に応じてクライアントへの料金調整相談 |
+| 9 | APT | 最終単価決定・合意 | 個人ソルバー | 交渉結果を踏まえた最終的な単価決定と合意形成 |
 
-#### C-3. 一括更新実行
+### 🔄 F. 稼働率・単価更新フロー（システム操作）
+
+#### F-1. 更新画面表示
 | 順番 | 誰が | アクション | 誰に | 詳細 |
 |-----|-----|-----------|-----|------|
-| 7 | SOLVER_STAFF | 一括更新実行 | システム | 「一括更新」ボタンクリック |
-| 8 | システム | 全データバリデーション | データ | 入力値の妥当性を最終確認 |
-| 9 | システム | API呼び出し | バックエンド | PUT /solvers/utilization-rate/{solver_corporation_id} |
-| 10 | システム | 楽観ロック制御 | データベース | Versionによる同時更新制御 |
-| 11 | システム | 一括更新実行 | DynamoDB | 複数ソルバーの稼働率・単価を同時更新 |
-| 12 | システム | 更新結果判定 | システム | 成功・失敗・部分的成功を判定 |
-| 13 | システム | 更新完了通知 | SOLVER_STAFF | 「更新が完了しました」または エラーメッセージ |
+| 10 | SOLVER_STAFF | 稼働率更新メニュー選択 | システム | 「稼働率・単価更新」ボタンクリック |
+| 11 | システム | 更新対象データ取得 | データベース | GET /solvers で所属個人ソルバー一覧取得 |
+| 12 | システム | 更新画面表示 | SOLVER_STAFF | テーブル形式で個人ソルバー一覧を表示 |
+
+#### F-2. 稼働率・単価入力
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 13 | SOLVER_STAFF | 稼働率入力 | システム | 今月・来月の稼働率（0-100%）を入力 |
+| 14 | SOLVER_STAFF | 単価入力 | システム | 人月単価・時間単価（上限・下限）を入力 |
+| 15 | システム | リアルタイムバリデーション | SOLVER_STAFF | 数値範囲、上限≥下限の制約チェック |
+
+#### F-3. 一括更新実行
+| 順番 | 誰が | アクション | 誰に | 詳細 |
+|-----|-----|-----------|-----|------|
+| 16 | SOLVER_STAFF | 一括更新実行 | システム | 「一括更新」ボタンクリック |
+| 17 | システム | 全データバリデーション | データ | 入力値の妥当性を最終確認 |
+| 18 | システム | API呼び出し | バックエンド | PUT /solvers/utilization-rate/{solver_corporation_id} |
+| 19 | システム | 楽観ロック制御 | データベース | Versionによる同時更新制御 |
+| 20 | システム | 一括更新実行 | DynamoDB | 複数ソルバーの稼働率・単価を同時更新 |
+| 21 | システム | 更新結果判定 | システム | 成功・失敗・部分的成功を判定 |
+| 22 | システム | 更新完了通知 | SOLVER_STAFF | 「更新が完了しました」または エラーメッセージ |
 
 ---
 
-### 🔄 D. エラーハンドリングフロー
+### 🔄 G. エラーハンドリングフロー
 
-#### D-1. バリデーションエラー（HTTPステータス: 400）
+#### G-1. バリデーションエラー（HTTPステータス: 400）
 | 順番 | 誰が | アクション | 誰に | 詳細 |
 |-----|-----|-----------|-----|------|
 | 1 | システム | エラー種別判定 | システム | リクエストデータの検証結果を判定 |
@@ -175,7 +278,7 @@
 | 4 | SOLVER_STAFF | エラー修正 | システム | 指摘された項目を修正して再入力 |
 | 5 | システム | 再バリデーション | データ | 修正後のデータを再度検証 |
 
-#### D-2. 権限エラー（HTTPステータス: 403）
+#### G-2. 権限エラー（HTTPステータス: 403）
 | 順番 | 誰が | アクション | 誰に | 詳細 |
 |-----|-----|-----------|-----|------|
 | 1 | システム | 権限チェック | ユーザー | JWT Tokenの権限情報を確認 |
@@ -183,7 +286,7 @@
 | 3 | システム | 403エラーページ表示 | SOLVER_STAFF | 権限不足による画面表示 |
 | 4 | SOLVER_STAFF | 適切な権限でログイン | システム | APTまたはSOLVER_STAFFでの再ログイン |
 
-#### D-3. 更新競合エラー（HTTPステータス: 409）
+#### G-3. 更新競合エラー（HTTPステータス: 409）
 | 順番 | 誰が | アクション | 誰に | 詳細 |
 |-----|-----|-----------|-----|------|
 | 1 | システム | 楽観ロック検証 | データベース | DynamoDBのVersionAttributeをチェック |
@@ -192,7 +295,7 @@
 | 4 | システム | 最新データ取得 | データベース | 現在の最新データを再取得 |
 | 5 | SOLVER_STAFF | 最新データで再入力 | システム | 更新された内容を反映して再度入力 |
 
-#### D-4. ファイルアップロードエラー
+#### G-4. ファイルアップロードエラー
 | 順番 | 誰が | アクション | 誰に | 詳細 |
 |-----|-----|-----------|-----|------|
 | 1 | SOLVER_STAFF | ファイル選択 | システム | jpg/png形式の画像ファイルを選択 |
